<resources>
    <string name="app_name">LayMusic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="exitmsg">Press once again to exit!</string>
    <string name="songs_name">Songs Name</string>
    <string name="songs_details">songs details</string>
    <string name="see_all"><![CDATA[See All >]]></string>
    <string name="new_release">New Release</string>
    <string name="songs">Songs</string>
    <string name="top_songs">Top Songs</string>
    <string name="category">Category</string>
    <string name="movie">Movie</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlist">Playlist</string>
    <string name="android_name">Android Name</string>
    <string name="search_here">Search Here</string>
    <string name="enter_the_playlist_name">Enter the playlist name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="contact_worldplanetesolutions_com_n_info_worldplanetesolutions_com">contact@worldplanetesolutions.com   info@worldplanetesolutions.com</string>
</resources>
