<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".bottomnavigation.MyMusicFragment">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/card_mymusic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:cardBackgroundColor="#20000000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/text_song"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/songs"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:drawableTint="@color/white"
                    android:drawableLeft="@drawable/ic_play_circle_filled_black_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_black_24dp"
                    tools:ignore="UnusedAttribute" />


                <TextView
                    android:id="@+id/text_playlist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/playlist"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:drawableTint="@color/white"
                    android:drawableLeft="@drawable/ic_list_black_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_black_24dp"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/text_albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/albums"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:drawableTint="@color/white"
                    android:drawableLeft="@drawable/ic_album_black_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_black_24dp"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/text_artists"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/artists"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:drawableTint="@color/white"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_black_24dp"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/text_movie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/movie"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:drawableTint="@color/white"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_black_24dp"
                    tools:ignore="UnusedAttribute" />

                <TextView
                    android:id="@+id/text_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/category"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:drawableTint="@color/white"
                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_black_24dp"
                    tools:ignore="UnusedAttribute" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</FrameLayout>