<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp">
<LinearLayout
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Playlist"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        >
    <EditText
        android:singleLine="true"
        android:id="@+id/ed_playlistName"
        android:layout_width="0dp"
        android:layout_weight="0.85"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_playlist_name"
        android:textSize="16sp"
        android:textColorHint="@color/grey_400"/>

        <ImageView
            android:id="@+id/iv_eraseText"
            android:layout_width="0dp"
            android:layout_weight="0.15"
            android:layout_height="25dp"
            android:src="@drawable/aa"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_weight="0.50"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:textSize="18dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:enabled="true"
            android:background="@color/grey_50"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="0.50"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:textSize="18dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:background="@color/grey_50"/>


    </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>