<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame"
    tools:context=".bottomnavigation.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:background="@color/brown">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="180dp">
                    <ViewFlipper
                        android:id="@+id/viewflipper"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autoStart="true"
                        android:flipInterval="2500"
                        android:inAnimation="@android:anim/slide_in_left"
                        android:outAnimation="@android:anim/slide_out_right"
                        android:paddingBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp"
                        android:paddingTop="4dp"
                        tools:ignore="UnusedAttribute,UselessParent">

                        <ImageView
                            android:id="@+id/image1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/banner"/>

                        <ImageView
                            android:id="@+id/image2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/sales"/>

                    </ViewFlipper>

                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/tv_newRelease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="#19000000"
                    android:padding="5dp"
                    android:text="@string/new_release"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_newRelease_seeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/see_all"
                    android:textColor="@color/WHITE"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerview2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="1dp"
                        android:scrollbars="none">
                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_topSongs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#19000000"
                    android:padding="5dp"
                    android:text="@string/top_songs"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_topSong_seeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/see_all"
                    android:textColor="@color/WHITE"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerview3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="1dp"
                        android:scrollbars="none">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_categoryBased"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#19000000"
                    android:padding="5dp"
                    android:text="Category"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_category_seeAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="See All >"
                    android:textColor="#e6e3e3"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:dividerHeight="1dp"
                        android:scrollbars="none">

                    </android.support.v7.widget.RecyclerView>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>